--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@ display:none}
 
 <!-- Forth 4th mobile container starts here -->
 
-<div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px;position:relative;top:20px">
+<div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px;position:relative;top:20px">  
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
-<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 3</div>
-<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
+<div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 4</div>
+<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Realme 9i 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
-    <img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="https://rukminim1.flixcart.com/image/416/416/xif0q/mobile/o/b/a/-original-imaghbequzj25wy2.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
-<span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
+<span class="bi bi-cpu" style="font-size:12px"> Dimensity 810 5G  </span><br>
 <span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
-<span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span>Proximity sensor</span><br><span>Gyroscope</span><br><span>Accelerometer</span><br><span>Ambient light sensor</span><br><span>Fingerprint</span></span>  </div>
-
+<span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 18 W (Fast charging) </span><br>
+<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden">
+<span>Magnetic Induction Sensor</span><br><span>Light Sensor</span><br><span>Accelerometer</span><br><span>Proximity Sensor</span><br><span>Side-mounted Fingerprint Sensor</span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
@@ -376,20 +376,25 @@ display:none}
     <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
  </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
-    <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
-</div>
+  <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden">
+  <span> 50 MP (Main)</span><br><span> No (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 8 MP (Front)</span></span>  </div>
+  
+  
+  
+  
+  </div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
-<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
+<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight2" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight2" aria-labelledby="offcanvasRightLabel2">
   <div class="offcanvas-header">
-    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel">Prices at different websites</h6>
+    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel2">Prices at different websites</h6>
      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
 <div style="height:400px;background-color:none;position:relative;border:1px solid #dddddd">
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
-<br> <br>   <iframe sandbox="allow-popups allow-scripts allow-modals allow-forms allow-same-origin" style="width:220px;height:340px;" marginwidth="0" marginheight="0" scrolling="yes" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=juriahmed1501-21&language=en_IN&marketplace=amazon&region=IN&placement=B0948NNY3W&asins=B0948NNY3W&linkId=930aeb4fa04504ff7b0fe192c5498560&show_border=true&link_opens_in_new_window=true"></iframe>
+<br> <br>   <iframe ></iframe>
 <div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:1px solid #dddddd">
 <div style="position:absolute;top:0px;height:60px;background-color:#f6f6f6;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:155px;background-color:#f6f6f6;padding:10px">
@@ -404,12 +409,13 @@ display:none}
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
-<h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Shopsy</h3>
+<h3 style="background-color:#f6f6f6;text-align:center;color:teal;font-family:'Georgia';">Price at Top10Tech</h3>
 
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb">
+  <b>Varient</b></div><span style="font-size:12px">4 GB RAM & 64 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
-<div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
+<div style="font-size:14px;text-align:center;height:24px;background-color:#f6f8f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
 <div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
@@ -420,7 +426,8 @@ display:none}
 
 
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:440px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb">
+  <b>Varient</b></div><span style="font-size:12px">6 GB RAM & 128 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
@@ -435,10 +442,10 @@ display:none}
 <div style="position:absolute;top:100px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://rukminim1.flixcart.com/image/416/416/xif0q/mobile/o/b/a/-original-imaghbequzj25wy2.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Realme 9i 5G </span><br><span style="color:teal;font-size:13px">4 GB & 64 GB</span><br><span>MRP <s>17,999</s></span><br><span style="font-size:14px"> INR 14,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 
@@ -446,17 +453,22 @@ display:none}
 <div style="position:absolute;top:400px;width:120px;height:260px;background-color:none;border:1px solid #dddddd">
 <div style="position:absolute;height:30px;top:0px;width:100%;text-align:center;background-color:#f6f6f6;font-size:16px"><b>Top10tech</b></div>
 <div style="position:absolute;top:20px;height:180px;width:100%;background-color:none">
-<img src="https://m.media-amazon.com/images/I/81B0HJigO-L._SX522_.jpg" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
+<img src="https://rukminim1.flixcart.com/image/416/416/xif0q/mobile/o/b/a/-original-imaghbequzj25wy2.jpeg?q=70" class="card-img-top" alt="..." style="padding:1px;height:100px;position:absolute;top:15px;width:85px;align-items:center;left:8px">
 </div>
 <div style="position:absolute;top:145px;height:90px;background-color:none;padding:6px;font-size:12px;width:100%">
-<span style="color:blue"> Redmi Note 10s </span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>16,999</s></span><br><span style="font-size:14px"> INR 13,999 </span></div>
+<span style="color:blue"> Realme 9i 5G</span><br><span style="color:teal;font-size:13px">6 GB & 128 GB</span><br><span>MRP <s>19,999</s></span><br><span style="font-size:14px"> INR 16,999 </span></div>
 <button type="button" class="btn btn-warning" style="position:absolute;bottom:0px;height:30px;width:100%;background-color:#ffa41d;font-size:14px;text-align:center;padding:0px;border-radius:0px"><span class="bi bi-bag"></span> Buy now</button>
 </div>
 </div>
 
-    
+
+
+
+ 
   </div>
 </div>
+
+
 
 </div>
   </div>
