--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ display:none}
   
   <section class="container pt-5" > <section class="container pt-5" > 
 
-<div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px">
+<div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline;height:450px;margin:0px;padding:0px">
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 3</div>
 <div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
