--- a/index.html
+++ b/index.html
@@ -482,15 +482,15 @@ display:none}
 <div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px;position:relative;top:60px">
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 4</div>
-<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Redmi note 10s</div>
+<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Poco M4 pro 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
-    <img src="https://m.media-amazon.com/images/I/71poFSdDs5S._SX679_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
+    <img src="" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
-<span class="bi bi-cpu" style="font-size:12px"> Mediatek Helio G95 (2.05 GHz)  </span><br>
-<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
+<span class="bi bi-cpu" style="font-size:12px"> Mediatek Dimensity 810(2.4 GHz)  </span><br>
+<span class="bi bi-memory" style="font-size:12px"> RAM- 4/6/8 GB(2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 33 W (Fast charging) </span><br>
-<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span>Proximity sensor</span><br><span>Gyroscope</span><br><span>Accelerometer</span><br><span>Ambient light sensor</span><br><span>Fingerprint</span></span>  </div>
+<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden"><span>Side fingerprint</span><br><span>Gyroscope</span><br><span>Compass</span><br><span>Ambient light sensor</span><br><span>Proximity sensor</span></span>  </div>
 
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
@@ -1196,7 +1196,7 @@ display:none}
       <th scope="row" style="position:sticky;left:0px;background-color:white">Poco M4 pro 5g</th>
       <td>MediaTek Dimensity 810</td>
       <td class="table-success">2.4 GHz</td>
-      <td>4/6 GB</td>
+      <td>4/6/8 GB</td>
       <td>2133 Mhz</td>
       <td>64/128 GB</td>
       <td class="table-success">UFS 2.2</td>
