--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ display:none}
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
     <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
 </div>
-    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
+    <a href="https://nanoreview.net/en/phone/xiaomi-redmi-note-10s" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
@@ -247,7 +247,7 @@ display:none}
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 18 W (Fast charging) </span><br>
 <span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden">
-<span>Magnetic Induction Sensor</span><br><span>Light Sensor</span><br><span>Accelerometer</span><br><span>Proximity Sensor</span><br><span>Side-mounted Fingerprint Sensor</span></span>  </div>
+<span>Side Fingerprint</span><br><span>Light Sensor</span><br><span>Accelerometer</span><br><span>Proximity Sensor</span><br><span></span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
@@ -379,7 +379,7 @@ display:none}
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
     <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:2px;overflow:hidden"><span> 64 MP (Main)</span><br><span> 8 MP (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 13 MP (Front)</span></span>  </div>  
 </div>
-    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
+    <a href="https://www.po.co/global/product/poco-m4-pro-5g/specs" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specs</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
