--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@ display:none}
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px">1. Credit and Debit cards</span><br><span style="text-align:left;font-size:12px">2. UPI  </span><br><span style="text-align:left;font-size:12px">3. EMI</span><br><span style="text-align:left;font-size:12px">4. Net Banking</span><br><span style="text-align:left;font-size:12px">5. Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
 
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
@@ -181,11 +181,11 @@ display:none}
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
@@ -194,11 +194,11 @@ display:none}
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
