--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ display:none}
     <img src="https://m.media-amazon.com/images/I/612gsie1ueL._SX679_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
 <span class="bi bi-cpu" style="font-size:12px"> Dimensity 810 5G  </span><br>
-<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
+<span class="bi bi-memory" style="font-size:12px"> RAM- 4 GB or 6 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 18 W (Fast charging) </span><br>
 <span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden">
@@ -251,8 +251,8 @@ display:none}
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
-    <p class="card-text" style="font-size:12px">Our rating's -<i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i><i class="bi bi-star-fill text-warning"></i></p>
- </div>   
+ <span style="font-size:12px">Avg rating of users-<b> 4.0/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.5/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.6/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63">View photos</a>
+</div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
   <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden">
   <span> 50 MP (Main)</span><br><span> No (Ultra wide)</span><br><span> 2 MP (Macro lens)</span><br><span> 2 MP (Depth lens)</span><br><span> 8 MP (Front)</span></span>  </div>
@@ -261,7 +261,7 @@ display:none}
   
   
   </div>
-    <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
+    <a href="https://priceinall.com/product/realme-9i-5g/" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Full specifications</a>
 <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight2" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight2" aria-labelledby="offcanvasRightLabel2">
@@ -279,7 +279,7 @@ display:none}
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px">1. Credit and Debit cards</span><br><span style="text-align:left;font-size:12px">2. UPI  </span><br><span style="text-align:left;font-size:12px">3. EMI</span><br><span style="text-align:left;font-size:12px">4. Net Banking</span><br><span style="text-align:left;font-size:12px">5. Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
 
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
@@ -295,7 +295,7 @@ display:none}
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f8f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
@@ -309,7 +309,7 @@ display:none}
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
