--- a/index.html
+++ b/index.html
@@ -1197,7 +1197,7 @@ display:none}
       <th scope="row" style="position:sticky;left:0px;background-color:white">Poco M4 pro 5g</th>
       <td>MediaTek Dimensity 810</td>
       <td class="table-success">2.4 GHz</td>
-      <td>4/6/8 GB</td>
+      <td class="table-success">4/6/8 GB</td>
       <td>2133 Mhz</td>
       <td>64/128 GB</td>
       <td class="table-success">UFS 2.2</td>
@@ -1212,7 +1212,7 @@ display:none}
       <th scope="row" style="position:sticky;left:0px;background-color:white">Realme 9i 5g</th>
       <td>MediaTek Dimensity 810</td>
       <td class="table-success">2.4 Ghz</td>
-      <td class="table-danger">4 Gb</td>
+      <td>4/6 Gb</td>
       <td>2133 MHz</td>
       <td>64 Gb</td>
       <td class="table-success">UFS 2.2</td>
