--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@ display:none}
 <span class="bi bi-memory" style="font-size:12px"> RAM- 4 GB or 6 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 18 W (Fast charging) </span><br>
-<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden">
+<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:none;font-size:10px;margin:0px;padding:5px;overflow:hidden">
 <span>Side Fingerprint</span><br><span>Light Sensor</span><br><span>Accelerometer</span><br><span>Proximity Sensor</span><br><span></span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
 <div style="position:absolute;background-color:#f6f8f6;height:150px;width:42%;padding:8px">
- <span style="font-size:12px">Avg rating of users-<b> 4.0/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.5/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.6/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63">View photos</a>
+ <span style="font-size:12px">Avg rating of users-<b> 4.0/5</b> (approx)</span><br><span style="font-size:12px">Avg rating of experts-<b> 3.5/5</b> (approx)</span><br><span style="font-size:12px">Price seg rating-<b> 4.4/5</b></span><br><a style="font-size:12px" href="https://www.google.com/search?q=redmi+note+10s&client=ms-android-samsung-gj-rev1&prmd=sivn&sxsrf=ALiCzsZe712IrWcYlH7jn2I_IS1xpkXVjA:1662394752521&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj1-cyFh_75AhWf7XMBHXL6AOYQ_AUoAnoECAIQAg&biw=412&bih=756&dpr=2.63">View photos</a>
 </div>   
 <div style="position:absolute;height:150px;width:42%;padding:6px;background-color:#f6f8f6;right:14px">
   <span class="bi bi-camera" style="font-size:12px"><b> Cameras :-</b></span><br><span style="font-size:14px;margin:0px;padding:5px;overflow:hidden">
@@ -283,7 +283,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
@@ -299,7 +299,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
@@ -313,7 +313,7 @@ display:none}
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
