--- a/index.html
+++ b/index.html
@@ -470,16 +470,16 @@ display:none}
 <div class="card container-fluid phone_container" id="hov" style="width:22rem;display:inline-block;height:450px;margin:0px;padding:0px;position:relative;top:60px">  
   <div class="card-body" style="position:relative;width:22rem;height:450px;margin:0px;padding:0px" >
 <div style="position:absolute;top:0px;left:5px;width:60px;height:32px;background-color:#b12703;color:white;padding:3px;text-align:center"># 4</div>
-<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Realme 9i 5G</div>
+<div style="position:absolute;top:0px;left:25%;right:25%;background-color:#f6f6f6;width:160px;height:26px;text-align:center;color:teal"> Oppo A74 5G</div>
 <div style="position:absolute;height:50%;width:38%;left:0px;align-items:center">
     <img src="https://m.media-amazon.com/images/I/61WOprbvuUL._SY679_.jpg" class="card-img-top" alt="..." style="padding:1px;height:160px;position:absolute;top:40px;width:140px"></div>
 <div style="position:absolute;width:61%;height:50%;left:39%;right:0px;margin:0px;padding:0px"><br><br>
-<span class="bi bi-cpu" style="font-size:12px"> Dimensity 810 5G  </span><br>
-<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB or 8 GB (2133 Mhz)  </span><br>
+<span class="bi bi-cpu" style="font-size:12px"> Qualcomm Snapdragon 480</span><br>
+<span class="bi bi-memory" style="font-size:12px"> RAM- 6 GB (2133 Mhz)  </span><br>
 <span class="bi bi-battery-charging" style="font-size:12px"> Battery- 5000 mAh (Li-Po)</span><br>
 <span class="bi bi-lightning-charge" style="font-size:12px"> Charging- 18 W (Fast charging) </span><br>
-<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:#f6f6f6;font-size:10px;margin:0px;padding:5px;overflow:hidden">
-<span>Magnetic Induction Sensor</span><br><span>Light Sensor</span><br><span>Accelerometer</span><br><span>Proximity Sensor</span><br><span>Side-mounted Fingerprint Sensor</span></span>  </div>
+<span class="bi bi-cpu-fill" style="font-size:12px;position:relative"> Sensors :-</span><span style="position:absolute;left:72px;height:90px;width:120px;background-color:none;font-size:10px;margin:0px;padding:5px;overflow:hidden">
+<span>Side fingerprint</span><br><span>Light Sensor</span><br><span>Accelerometer</span><br><span>Proximity Sensor</span><br><span>Gyroscope</span></span>  </div>
 <br><br><br><br>
 <div style="position:absolute;top:50%;height:50%;width:100%;margin:0px;padding:14px;background-color:none">
 
@@ -495,11 +495,11 @@ display:none}
   
   </div>
     <a href="#" class="btn btn-outline-primary" style="position:absolute;left:14px;bottom:16px">Check price</a>
-<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight2" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
+<button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight4" aria-controls="offcanvasRight" style="position:absolute;right:14px;bottom:16px">View prices</button>
 
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight2" aria-labelledby="offcanvasRightLabel2">
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight4" aria-labelledby="offcanvasRightLabel4">
   <div class="offcanvas-header">
-    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel2">Prices at different websites</h6>
+    <h6 style="font-family: 'Comfortaa', cursive;" class="offcanvas-title" id="offcanvasRightLabel4">Prices at different websites</h6>
      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
@@ -507,16 +507,16 @@ display:none}
 <h3 style="background-color:none;text-align:center;font-family:'Georgia';color:teal">Price at Amazon</h3>
 <br> <br>   <iframe ></iframe>
 <div style="position:absolute;left:45%;width:200px;height:280px;background-color:none;top:70px;font-size:13px;padding:0px;border:1px solid #dddddd">
-<div style="position:absolute;top:0px;height:60px;background-color:#f6f6f6;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 64 GB Storage</span></div>
+<div style="position:absolute;top:0px;height:60px;background-color:#f6f6f6;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#f6f6f6"><b>Varient</b></div><span style="font-size:12px">6 GB RAM & 128 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:155px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px">1. Credit and Debit cards</span><br><span style="text-align:left;font-size:12px">2. UPI  </span><br><span style="text-align:left;font-size:12px">3. EMI</span><br><span style="text-align:left;font-size:12px">4. Net Banking</span><br><span style="text-align:left;font-size:12px">5. Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
 
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 </div>  <br>
 
 <div style="background-color:none;height:800px;position:relative;border:1px solid #dddddd">
@@ -524,29 +524,29 @@ display:none}
 
 <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:120px;font-size:13px;padding:0px;border:1px solid #dddddd">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb">
-  <b>Varient</b></div><span style="font-size:12px">4 GB RAM & 64 GB Storage</span></div>
+  <b>Varient</b></div><span style="font-size:12px">6 GB RAM & 128 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f8f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
 
 
 
-<div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:440px;font-size:13px;padding:0px;border:1px solid #dddddd">
+<!-- <div style="position:absolute;left:45%;width:200px;height:200px;background-color:none;top:440px;font-size:13px;padding:0px;border:1px solid #dddddd">
 <div style="position:absolute;top:0px;height:60px;background-color:#fbfbfb;padding:10px;width:100%;text-align:center"><div style="font-size:14px;text-align:center;height:20px;background-color:#fbfbfb">
   <b>Varient</b></div><span style="font-size:12px">6 GB RAM & 128 GB Storage</span></div>
 <div style="position:absolute;top:55px;width:100%;height:75px;background-color:#f6f6f6;padding:10px">
 <div style="font-size:14px;text-align:center;height:24px;background-color:#f6f6f6"><b>Payment methods</b></div><span style="text-align:left;font-size:12px"> Cash on delivery</span><br><span style="text-align:left;font-size:10px">* It may vary depending upon location</span>
 </div>
-<div style="position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
+<div style="display:none;position:absolute;bottom:25px;width:100%;height:35px;background-color:#fbfbfb;padding:2px;font-size:11px;text-align:center">
 <span class="bi bi-cash"> Highest price recorded:- Rs 4000 <span class="bi bi-chevron-double-up" style="color:red"></span></span><br>
 <span class="bi bi-cash"> Lowest price recorded:- Rs 2000 <span class="bi bi-chevron-double-down" style="color:green"></span></span><br>
 </div>
-<div style="position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div>
+<div style="display:none;position:absolute;bottom:0px;width:100%;height:25px;background-color:#f6f8f6;padding:2px;font-size:12px;text-align:center">Last updated: 20/20/2020</div></div> -->
 
 
 
